css/styles.css
/* ... */
:root {
  width: 100%;
  font-size: 18px;
}

html {
  min-height: 100%;
  overflow-x: hidden;
}

body {
  overflow-x: hidden;
  background-color: #dee1e6;
}

a:link {
  text-decoration: none;
}

a:visited {
  color: #000000;
}

a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
  color: #ffffff !important;
}

main {
  min-height: 100%;
}

/* ++++++++++++++++++++++header++++++++++++++++++++++++++ */
header {
  margin: 5px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #ffffff;
  height: 3.5rem;
  position: fixed;
  width: 100%;
  top: 4px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
  z-index: 100;
  /* outline: dashed red; */
}

.logo {
  transform: translateX(-50%);
}

header figure {
  margin-left: 50px;
}

.header-btn {
  background-color: #3687E8;
  width: 110px;
  height: 50px;
  border-radius: 0.5rem;
  border: none;
  font-size: 1.2rem;
  color: #ffffff;
}

.header-btn:hover {
  cursor: pointer;
}

.nav-container {
  width: fit-content;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  /* outline: dashed red; */
  height: inherit;
}

ul {
  display: flex;
  flex-direction: row;
}

.nav--top--center li {
  margin-left: 40px;
  display: flex;
  align-items: center;
}

.nav--top--center ul li a span {
  text-align: center;
}

.nav--top--right {
  min-width: 10%; /* outline: dashed orange; */
}

.nav--top--right li {
  margin-right: 30px; /* outline: dashed red ; */
}

.contact-container {
  width: 100%;
  height: fit-content;
  display: none;
  justify-content: flex-end;
  padding-right: 1rem;
  padding-top: 0.7rem;
}

.menu_cont {
  display: none;
}

.ms1 {
  transition: all 0.1s ease;
  /* transform: rotate(45deg); */
}

.ms1 {
  transform: rotate(45deg);
}

.ms2 {
  transition: all 0.1s ease;
}

.ms2 {
  opacity: 0;
}

.ms3 {
  transition: all 0.1s ease;
}

.ms3 {
  transform: rotate(-45deg);
  position: relative;
  top: -8px;
}

/* +++++++++++++++++++++++++++ */
.ms1-flip {
  transition: all 0.1s ease;
  /* transform: rotate(45deg); */
}

.ms1-flip {
  transform: rotate(0deg);
}

.ms2-flip {
  transition: all 0.1s ease;
}

.ms2-flip {
  opacity: 100%;
}

.ms3-flip {
  transition: all 0.1s ease;
}

.ms3-flip {
  transform: rotate(0deg);
  position: relative;
  top: 0px;
}

#message-text {
  resize: none;
}

.modal-footer {
  display: flex;
  justify-content: center;
}
.modal-footer .cover-letter {
  color: #ffffff;
}
.modal-footer .cover-letter:hover {
  color: #ffffff;
  transform: none;
}

/* End of media max-width 820px */
.hero-area {
  padding-top: 4rem;
  width: 100%;
  min-height: 100vh;
  display: flex;
  gap: 2rem;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.resume-block {
  background-image: url("img/resume-quicklook.png");
  background-repeat: no-repeat;
  background-position: center;
  height: 150px !important;
}

.ovly {
  cursor: pointer;
  width: 100%;
  height: 100%;
  transition: all 0.5s ease;
}

.resume-btn a {
  color: #ffffff;
  text-decoration: none;
}

.ovly:hover {
  background-color: rgba(0, 0, 0, 0.5) !important;
}

.profile-Container {
  margin-top: 2rem;
  width: 300px;
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.profile-Container h3 {
  margin-top: 2rem;
  text-align: center;
  line-height: 1.5rem;
}

.profile-Container h3 span {
  font-size: 2rem;
  font-weight: 700;
  color: #2e70c2;
}

.profile-container_frame {
  width: 169px;
  height: 169px;
  border-radius: 50%;
  overflow: hidden;
  /* background-color: #5200c6; */
  background-image: url("img/HerbPhoto.jpg");
  background-repeat: no-repeat;
  background-size: 200px;
  background-position: 79% 9%;
}

.cover-letter-container {
  margin-top: 1rem;
  width: 100%;
  height: fit-content;
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.cover-letter {
  width: 90%;
  max-width: 800px;
  height: fit-content;
  display: flex;
  align-items: center;
  border-radius: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  background: hsl(213deg, 80%, 57%);
  background: -webkit-linear-gradient(180deg, hsl(213deg, 80%, 57%) 0%, hsl(212deg, 74%, 73%) 100%);
}
.cover-letter p {
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: left;
}

.imagineer {
  font-size: 0.1rem;
}

.about-area {
  margin-top: 2rem;
  min-height: 400px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 1rem;
  justify-content: space-evenly;
  align-items: center;
}

.about-container:nth-child(1), .about-container:nth-child(2), .about-container:nth-child(3) {
  width: 300px;
  height: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about-container h4 {
  font-size: 2rem;
}

.about {
  width: 295px;
  height: 295px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: #c9cbd0;
  padding: 1rem;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

.about {
  text-align: center;
  font-family: "Space Mono", monospace;
}

.about span {
  font-size: 0.92rem;
  font-weight: 700;
  color: #2e70c2;
}

.left {
  width: 295px;
  height: 295px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  /*     align-items: center; */
  background-color: #c9cbd0;
  padding: 0rem 2rem;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  /*   padding-left:2rem; */
}

.title-projects {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.title-projects h1 {
  text-align: center;
}
/* ... */

